--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "4",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1"
   }
 }
