--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "release": "standard-version",
     "lint": "eslint --fix",
     "format": "prettier --write './**/*.{js,jsx,json}' --config ./.prettierrc"
   },
@@ -26,6 +27,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "4",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "standard-version": "^9.1.1"
   }
 }
