--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "build:storybook": "build-storybook"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.6",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "framer-motion": "^3.10.5",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@chakra-ui/react": "^1.3.4",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@storybook/addon-actions": "^6.1.21",
