--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "release": "standard-version",
-    "lint": "eslint --fix",
+    "lint": "eslint --fix . --ext .js,.jsx",
     "format": "prettier --write './**/*.{js,jsx,json}' --config ./.prettierrc",
     "start:storybook": "start-storybook -p 5555",
     "build:storybook": "build-storybook"
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^3.10.5",
     "next": "10.0.9",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
