--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^1.3.4",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@react-google-maps/api": "^2.1.1",
     "framer-motion": "^3.10.5",
     "next": "10.0.9",
     "prop-types": "^15.7.2",
