--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@react-google-maps/api": "^2.1.1",
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "framer-motion": "^3.10.5",
     "next": "10.0.9",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
